--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<!-- Description vide a remplir pour le SEO -->
-	<meta name="description" content="La chouette agence situé à Lyon est une grande agence de web design qui vous apporteras beaucoup de prospects">
+	<meta name="description"
+		content="La chouette agence situé à Lyon est une grande agence de web design qui vous apporteras beaucoup de prospects">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<!-- icone du site avant le titre -->
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
@@ -24,15 +25,7 @@
 	<title>La Chouette Agence</title>
 
 	<!-- Analytics -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2HGG4VZ7JL"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
 
-		gtag('config', 'G-2HGG4VZ7JL');
-	</script>
 	<!-- Analytics END -->
 
 </head>
@@ -46,14 +39,19 @@
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
-					<!-- style dans le html a retirer -->
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
 								alt="Logo du site représentant un hibou" /></a>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+							data-toggle="collapse" data-target=".navbar-1">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<!-- supprimer acceuil ?? lien redondant vers la meme page -->
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
@@ -79,8 +77,9 @@
 							La chouette agence.
 						</h1>
 						<div class="text-center">
-							<a href="#bloc-3-what-i-do" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-								id="cta-hero">En apprendre d'avantage</a>
+							<a href="#bloc-3-what-i-do"
+								class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">En
+								apprendre d'avantage</a>
 						</div>
 					</div>
 				</div>
@@ -89,7 +88,7 @@
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
-		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row text-center promesse">
 					<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir
@@ -144,11 +143,12 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<article
+			class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -168,21 +168,20 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</article>
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row text-center promesse">
-						<p>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.</p>
+					<p>Nous travaillons avec beaucoup de clients,<br>voici nos réalisations.</p>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.bmp" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.bmp"
-								alt="photo de cahier ouvert en plusieurs colorie"
+								src="img/1.png" alt="photo de cahier ouvert en plusieurs colorie"
 								class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -194,7 +193,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/2.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/2.bmp" class="img-responsive portfolio-thumb"
+								src="img/2.png" class="img-responsive portfolio-thumb"
 								alt="Photo d'une photographe avec son apareil photo" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
@@ -208,7 +207,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.bmp" class="img-responsive portfolio-thumb"
+								src="img/3.png" class="img-responsive portfolio-thumb"
 								alt="Photo de differents outils pour enregistrer des videos ou des photos" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -221,7 +220,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.bmp" class="img-responsive portfolio-thumb"
+								src="img/4.png" class="img-responsive portfolio-thumb"
 								alt="Photo de maquette de site web et d'un ordinateur pour le concevoir" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
@@ -251,7 +250,12 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
-		<!-- on passe du bloc 5 au 8 ?? -->
+
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+				class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
@@ -263,22 +267,26 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com" aria-label="logo de twitter"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com" aria-label="logo de twitter"><span
+											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://fr-fr.facebook.com" aria-label="logo de facebook"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://fr-fr.facebook.com"
+										aria-label="logo de facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com" aria-label="logo de dribble"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com" aria-label="logo de dribble"><span
+											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com" aria-label="logo d'instagram"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com"
+										aria-label="logo d'instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
