--- a/contact.html
+++ b/contact.html
@@ -91,29 +91,28 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent."
-							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<form id="form_1" aria-label="Formulaire de contact" novalidate>
 							<div class="form-group">
 								<label for="name">
-									Nom<br>
+									Nom
 								</label>
-								<input id="name" class="form-control" required />
+								<input id="name" class="form-control" required placeholder="Entrez votre nom"/>
 							</div>
 							<div class="form-group">
 								<label for="email">
-									Adresse email<br>
+									Adresse email
 								</label>
-								<input id="email" class="form-control" type="email" required />
+								<input id="email" class="form-control" type="email" required placeholder="Entrez votre email"/>
 							</div>
 							<div class="form-group">
 								<label for="input_504">
-									Comment nous avez-vous connu ?<br>
+									Comment nous avez-vous connu ?
 								</label>
-								<input class="form-control" type="email" required id="input_504" />
+								<input class="form-control" type="email" required id="input_504" placeholder="Recherche google, bouche à oreilles, internet, radio..."/>
 							</div>
 							<div class="form-group">
 								<label for="message">
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+									Brief de votre projet (Ajoutez autant de détails que nécessaire)
 								</label><textarea id="message" class="form-control form-control1" rows="4" cols="50"
 									required></textarea>
 							</div>
